assignment/promotional-task-06/terraform/modules/nacls/main.tf
resource "aws_network_acl" "public" {
  vpc_id     = var.vpc_id
  subnet_ids = [var.public_subnet_id]

  egress {
    from_port  = 0
    to_port    = 0
    protocol   = "-1"
    rule_no    = 100
    action     = "allow"
    cidr_block = var.internet_cidr_block
  }

  ingress {
    from_port  = 80
    to_port    = 80
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = var.internet_cidr_block
  }

  ingress {
    from_port  = 443
    to_port    = 443
    protocol   = "tcp"
    rule_no    = 110
    action     = "allow"
    cidr_block = var.internet_cidr_block
  }

  ingress {
    from_port  = 22
    to_port    = 22
    protocol   = "tcp"
    rule_no    = 120
    action     = "allow"
    cidr_block = var.ssh_access_ip
  }

  tags = {
    Name = var.public_nacl_name
  }
}

resource "aws_network_acl" "private" {
  vpc_id     = var.vpc_id
  subnet_ids = [var.private_subnet_id]

  egress {
    from_port  = 80
    to_port    = 80
    protocol   = "-1"
    rule_no    = 100
    action     = "allow"
    cidr_block = var.internet_cidr_block
  }

  egress {
    from_port  = 0
    to_port    = 0
    protocol   = "tcp"
    rule_no    = 110
    action     = "allow"
    cidr_block = "10.0.1.0/24"
  }

  ingress {
    from_port  = 0
    to_port    = 0
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = "10.0.1.0/24"
  }

  tags = {
    Name = var.private_nacl_name
  }
}
